--- a/src/Presentation/SmartStore.Web/Views/Shared/_Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_Print.cshtml
@@ -1,13 +1,25 @@
-﻿@{
-    Layout = "~/Views/Shared/_Root.Head.cshtml";
-    Html.AddBodyCssClass("print");
+﻿@model dynamic
+
+@{
+	Layout = null;
 }
 
-<div class="container">
-    <div class="row">
-        <div class="span24">
-            @RenderBody()
-        </div>
-    </div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>@Html.SmartTitle(false)</title>
+	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+	
+	<link rel="stylesheet" type="text/css" href="~/Content/print.css" />
 
+	@Html.SmartCssFiles(this.Url, ResourceLocation.Head)
+	@Html.CustomHead()
+</head>
+<body class="@Html.BodyCssClass()">
+	@RenderBody()
+	@Html.SmartCssFiles(this.Url, ResourceLocation.Foot)
+</body>
+</html>
+
+
+		
