--- a/src/Presentation/SmartStore.Web/Views/Common/AccountDropdown.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/AccountDropdown.cshtml
@@ -36,7 +36,7 @@
         @if (Model.AllowPrivateMessages)
         {
         <li>
-			<a href="@Url.RouteUrl("PrivateMessages", new { tab = "" })" rel="nofollow">
+			<a href="@Url.RouteUrl("PrivateMessages", new { tab = "inbox" })" rel="nofollow">
 				<i class="fa fa-envelope"></i>
 				@T("PrivateMessages.Inbox")
 				@if (Model.UnreadPrivateMessages != "")
