--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Send.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Send.cshtml
@@ -59,7 +59,7 @@
                         <button type="submit" class="btn btn-primary">
                             @T("PrivateMessages.Send.SendButton")
                         </button>
-                        <button class="btn" onclick="setLocation('@Url.RouteUrl("PrivateMessages")')" >
+                        <button class="btn" onclick="setLocation('@Url.RouteUrl("PrivateMessages", , new { tab = "inbox" })')" >
                             @T("PrivateMessages.Send.CancelButton")
                         </button>
                     </td>
