--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/View.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/View.cshtml
@@ -53,7 +53,7 @@
 						<i class="fa fa-trash-o"></i>
 						@T("PrivateMessages.View.DeleteButton")
 					</a>
-					<a class="btn" href='@Url.RouteUrl("PrivateMessages")' rel="nofollow">
+					<a class="btn" href='@Url.RouteUrl("PrivateMessages", new { tab = "inbox" })' rel="nofollow">
 						<i class="fa fa-user"></i>
 						@T("PrivateMessages.View.BackButton")
 					</a>
