--- a/src/Presentation/SmartStore.Web/Views/Common/PdfReceiptHeader.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/PdfReceiptHeader.cshtml
@@ -6,9 +6,10 @@
 }
 
 <header>
+	@Html.Widget("invoice_header_before")
 	<table style="height: 100px;">
 		<tr>
-			<td style="text-align: right; vertical-align: middle">
+			<td style="width: 50%; text-align: left; vertical-align: middle">
 				@if (Model.LogoUrl.HasValue())
 				{
 					<img src="@Model.LogoUrl" alt="" style="max-height: 100px" />
@@ -18,7 +19,11 @@
 					<h2>@Model.StoreName</h2>
 				}
 			</td>
+			<td style="width: 50%; text-align: right;">
+				@Html.Widget("invoice_header_right")
+			</td>
 		</tr>
 	</table>
+	@Html.Widget("invoice_header_after")
 </header>
 
