--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
@@ -14,9 +14,13 @@
             @T("Admin.Orders.Shipments.ViewDetails") - @Model.Id @Html.ActionLink("(" + T("Admin.Orders.Shipments.BackToOrder") + ")", "Edit", new { id = Model.OrderId })
         </div>
         <div class="options">
+            <a href="@Url.Action("PdfPackagingSlip", new { shipmentId = Model.Id, pdf = false })" target="print" class="btn print-order-button" rel="nofollow">
+                <i class="fa fa-print"></i>
+                @T("Order.Print")
+            </a>
             @if (Model.DisplayPdfPackagingSlip)
             {
-                <a href="@Url.Action("PdfPackagingSlip", new { shipmentId = Model.Id })" class="btn">
+                <a href="@Url.Action("PdfPackagingSlip", new { shipmentId = Model.Id, pdf = true })" class="btn">
 					<i class="fa fa-print"></i>
 					@T("Admin.Orders.Shipments.PrintPackagingSlip")
 				</a>
