Several fixes to pdf converter

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
@@ -26,24 +26,56 @@
 
             <div class="btn-group" style="vertical-align: middle">
 				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-					Export
+					@T("Common.Export")
 					<span class="fa fa-caret-down"></span>
 				</a>
 				<ul class="dropdown-menu">
-					<li><a href="@Url.Action("ExportXmlAll")">@T("Admin.Common.ExportToXml.All")</a></li>
-					<li><a href="@Url.Action("ExportExcelAll")">@T("Admin.Common.ExportToExcel.All")</a></li>
+					<li>
+						<a href="@Url.Action("ExportXmlAll")">
+							<i class="fa fa-fw fa-code"></i>
+							@T("Admin.Common.ExportToXml.All")
+						</a>
+					</li>
+					<li>
+						<a href="@Url.Action("ExportExcelAll")">
+							<i class="fa fa-fw fa-file-excel-o"></i>
+							@T("Admin.Common.ExportToExcel.All")
+						</a>
+					</li>
 
 					@if (Model.DisplayPdfExport)
 					{
-						<li><a href="@Url.Action("ExportPdfAll")">@T("Admin.Common.ExportToPdf.All")</a></li>
+						<li>
+							<a href="@Url.Action("ExportPdfAll")">
+								<i class="fa fa-fw fa-file-pdf-o"></i>
+								@T("Admin.Common.ExportToPdf.All")
+							</a>
+						</li>
 					}
 
-					<li><a id="exportxml-selected" href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportXmlSelected", "Product")">@T("Admin.Common.ExportToXml.Selected")</a></li>
-					<li><a id="exportexcel-selected" href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportExcelSelected", "Product")">@T("Admin.Common.ExportToExcel.Selected")</a></li>
+					<li class="divider"></li>
+
+					<li>
+						<a id="exportxml-selected" href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportXmlSelected")">
+							<i class="fa fa-fw fa-code"></i>
+							@T("Admin.Common.ExportToXml.Selected")
+						</a>
+					</li>
+					<li>
+						<a id="exportexcel-selected" href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportExcelSelected")">
+							<i class="fa fa-fw fa-file-excel-o"></i>
+							@T("Admin.Common.ExportToExcel.Selected")
+						</a>
+					</li>	
 
 					@if (Model.DisplayPdfExport)
 					{
-						<li><a href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportPdfSelected", "Product")">@T("Admin.Common.ExportToPdf.Selected")</a></li>
+						<li>
+							<a href="javascript:void(0)" class="export-form-post" data-url="@Url.Action("ExportPdfSelected")">
+								<i class="fa fa-fw fa-file-pdf-o"></i>
+								@T("Admin.Common.ExportToPdf.Selected")
+							</a>
+						</li>
 					}
 				</ul>
             </div>
